--- a/code/20210413-AlphaBeta/python/plot/readme.html
+++ b/code/20210413-AlphaBeta/python/plot/readme.html
@@ -4,7 +4,7 @@
       <th></th>
       <th>Baseline1</th>
       <th>Baseline2</th>
-      <th>Baseline2_sym</th>
+      <th>Baseline2_reversed</th>
       <th>Both_0</th>
       <th>Both_1</th>
       <th>Both_2</th>
@@ -18,7 +18,7 @@
       <th>CAS (excl. ΔCAS)</th>
       <td><a href="Baseline1/CAS (excl. ΔCAS).png"><img style="width:196px" src="Baseline1/CAS (excl. ΔCAS).png"/></a></td>
       <td><a href="Baseline2/CAS (excl. ΔCAS).png"><img style="width:196px" src="Baseline2/CAS (excl. ΔCAS).png"/></a></td>
-      <td><a href="Baseline2_sym/CAS (excl. ΔCAS).png"><img style="width:196px" src="Baseline2_sym/CAS (excl. ΔCAS).png"/></a></td>
+      <td><a href="Baseline2_reversed/CAS (excl. ΔCAS).png"><img style="width:196px" src="Baseline2_reversed/CAS (excl. ΔCAS).png"/></a></td>
       <td><a href="Both_0/CAS (excl. ΔCAS).png"><img style="width:196px" src="Both_0/CAS (excl. ΔCAS).png"/></a></td>
       <td><a href="Both_1/CAS (excl. ΔCAS).png"><img style="width:196px" src="Both_1/CAS (excl. ΔCAS).png"/></a></td>
       <td><a href="Both_2/CAS (excl. ΔCAS).png"><img style="width:196px" src="Both_2/CAS (excl. ΔCAS).png"/></a></td>
@@ -30,7 +30,7 @@
       <th>ΔCAS</th>
       <td><a href="Baseline1/ΔCAS.png"><img style="width:196px" src="Baseline1/ΔCAS.png"/></a></td>
       <td><a href="Baseline2/ΔCAS.png"><img style="width:196px" src="Baseline2/ΔCAS.png"/></a></td>
-      <td><a href="Baseline2_sym/ΔCAS.png"><img style="width:196px" src="Baseline2_sym/ΔCAS.png"/></a></td>
+      <td><a href="Baseline2_reversed/ΔCAS.png"><img style="width:196px" src="Baseline2_reversed/ΔCAS.png"/></a></td>
       <td><a href="Both_0/ΔCAS.png"><img style="width:196px" src="Both_0/ΔCAS.png"/></a></td>
       <td><a href="Both_1/ΔCAS.png"><img style="width:196px" src="Both_1/ΔCAS.png"/></a></td>
       <td><a href="Both_2/ΔCAS.png"><img style="width:196px" src="Both_2/ΔCAS.png"/></a></td>
@@ -42,7 +42,7 @@
       <th>ImpB</th>
       <td><a href="Baseline1/ImpB.png"><img style="width:196px" src="Baseline1/ImpB.png"/></a></td>
       <td><a href="Baseline2/ImpB.png"><img style="width:196px" src="Baseline2/ImpB.png"/></a></td>
-      <td><a href="Baseline2_sym/ImpB.png"><img style="width:196px" src="Baseline2_sym/ImpB.png"/></a></td>
+      <td><a href="Baseline2_reversed/ImpB.png"><img style="width:196px" src="Baseline2_reversed/ImpB.png"/></a></td>
       <td><a href="Both_0/ImpB.png"><img style="width:196px" src="Both_0/ImpB.png"/></a></td>
       <td><a href="Both_1/ImpB.png"><img style="width:196px" src="Both_1/ImpB.png"/></a></td>
       <td><a href="Both_2/ImpB.png"><img style="width:196px" src="Both_2/ImpB.png"/></a></td>
@@ -54,7 +54,7 @@
       <th>ImpA</th>
       <td><a href="Baseline1/ImpA.png"><img style="width:196px" src="Baseline1/ImpA.png"/></a></td>
       <td><a href="Baseline2/ImpA.png"><img style="width:196px" src="Baseline2/ImpA.png"/></a></td>
-      <td><a href="Baseline2_sym/ImpA.png"><img style="width:196px" src="Baseline2_sym/ImpA.png"/></a></td>
+      <td><a href="Baseline2_reversed/ImpA.png"><img style="width:196px" src="Baseline2_reversed/ImpA.png"/></a></td>
       <td><a href="Both_0/ImpA.png"><img style="width:196px" src="Both_0/ImpA.png"/></a></td>
       <td><a href="Both_1/ImpA.png"><img style="width:196px" src="Both_1/ImpA.png"/></a></td>
       <td><a href="Both_2/ImpA.png"><img style="width:196px" src="Both_2/ImpA.png"/></a></td>
@@ -66,7 +66,7 @@
       <th>Ran·GTP</th>
       <td><a href="Baseline1/Ran·GTP.png"><img style="width:196px" src="Baseline1/Ran·GTP.png"/></a></td>
       <td><a href="Baseline2/Ran·GTP.png"><img style="width:196px" src="Baseline2/Ran·GTP.png"/></a></td>
-      <td><a href="Baseline2_sym/Ran·GTP.png"><img style="width:196px" src="Baseline2_sym/Ran·GTP.png"/></a></td>
+      <td><a href="Baseline2_reversed/Ran·GTP.png"><img style="width:196px" src="Baseline2_reversed/Ran·GTP.png"/></a></td>
       <td><a href="Both_0/Ran·GTP.png"><img style="width:196px" src="Both_0/Ran·GTP.png"/></a></td>
       <td><a href="Both_1/Ran·GTP.png"><img style="width:196px" src="Both_1/Ran·GTP.png"/></a></td>
       <td><a href="Both_2/Ran·GTP.png"><img style="width:196px" src="Both_2/Ran·GTP.png"/></a></td>
@@ -78,7 +78,7 @@
       <th>NLS</th>
       <td><a href="Baseline1/NLS.png"><img style="width:196px" src="Baseline1/NLS.png"/></a></td>
       <td><a href="Baseline2/NLS.png"><img style="width:196px" src="Baseline2/NLS.png"/></a></td>
-      <td><a href="Baseline2_sym/NLS.png"><img style="width:196px" src="Baseline2_sym/NLS.png"/></a></td>
+      <td><a href="Baseline2_reversed/NLS.png"><img style="width:196px" src="Baseline2_reversed/NLS.png"/></a></td>
       <td><a href="Both_0/NLS.png"><img style="width:196px" src="Both_0/NLS.png"/></a></td>
       <td><a href="Both_1/NLS.png"><img style="width:196px" src="Both_1/NLS.png"/></a></td>
       <td><a href="Both_2/NLS.png"><img style="width:196px" src="Both_2/NLS.png"/></a></td>
