--- a/code/20210413-AlphaBeta/checkpoint/index.html
+++ b/code/20210413-AlphaBeta/checkpoint/index.html
@@ -1,3 +1,2 @@
 
-<a href='20210522-114349/scenarios/index.html'>20210522-114349</a>: <a href='20210522-114349/plot/index.html'>figures</a> <br>
-<a href='20210522-134457/scenarios/index.html'>20210522-134457</a>: <a href='20210522-134457/plot/index.html'>figures</a> <br>
+20210522-134457: <a href='20210522-134457/model.html'>base model</a>, <a href='20210522-134457/scenarios/index.html'>scenarios</a>, <a href='20210522-134457/plot/index.html'>figures</a> <br>
