--- a/code/20210413-AlphaBeta/python/plot/index.html
+++ b/code/20210413-AlphaBeta/python/plot/index.html
@@ -39,6 +39,30 @@
       <td><a href="Only_dCAS_2/ΔCAS.png"><img style="width:196px" src="Only_dCAS_2/ΔCAS.png"/></a></td>
     </tr>
     <tr>
+      <th>CAS·Ran·GTP (excl. ΔCAS·Ran·GTP)</th>
+      <td><a href="Baseline1/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="Baseline1/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
+      <td><a href="Baseline2/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="Baseline2/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
+      <td><a href="Baseline2_reversed/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="Baseline2_reversed/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
+      <td><a href="Both_0/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="Both_0/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
+      <td><a href="Both_1/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="Both_1/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
+      <td><a href="Both_2/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="Both_2/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
+      <td><a href="OldBaseline/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="OldBaseline/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
+      <td><a href="Only_dCAS_1/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="Only_dCAS_1/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
+      <td><a href="Only_dCAS_2/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="Only_dCAS_2/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
+    </tr>
+    <tr>
+      <th>ΔCAS·Ran·GTP</th>
+      <td><a href="Baseline1/ΔCAS·Ran·GTP.png"><img style="width:196px" src="Baseline1/ΔCAS·Ran·GTP.png"/></a></td>
+      <td><a href="Baseline2/ΔCAS·Ran·GTP.png"><img style="width:196px" src="Baseline2/ΔCAS·Ran·GTP.png"/></a></td>
+      <td><a href="Baseline2_reversed/ΔCAS·Ran·GTP.png"><img style="width:196px" src="Baseline2_reversed/ΔCAS·Ran·GTP.png"/></a></td>
+      <td><a href="Both_0/ΔCAS·Ran·GTP.png"><img style="width:196px" src="Both_0/ΔCAS·Ran·GTP.png"/></a></td>
+      <td><a href="Both_1/ΔCAS·Ran·GTP.png"><img style="width:196px" src="Both_1/ΔCAS·Ran·GTP.png"/></a></td>
+      <td><a href="Both_2/ΔCAS·Ran·GTP.png"><img style="width:196px" src="Both_2/ΔCAS·Ran·GTP.png"/></a></td>
+      <td><a href="OldBaseline/ΔCAS·Ran·GTP.png"><img style="width:196px" src="OldBaseline/ΔCAS·Ran·GTP.png"/></a></td>
+      <td><a href="Only_dCAS_1/ΔCAS·Ran·GTP.png"><img style="width:196px" src="Only_dCAS_1/ΔCAS·Ran·GTP.png"/></a></td>
+      <td><a href="Only_dCAS_2/ΔCAS·Ran·GTP.png"><img style="width:196px" src="Only_dCAS_2/ΔCAS·Ran·GTP.png"/></a></td>
+    </tr>
+    <tr>
       <th>ImpB</th>
       <td><a href="Baseline1/ImpB.png"><img style="width:196px" src="Baseline1/ImpB.png"/></a></td>
       <td><a href="Baseline2/ImpB.png"><img style="width:196px" src="Baseline2/ImpB.png"/></a></td>
