--- a/code/20210413-AlphaBeta/scenarios/index.html
+++ b/code/20210413-AlphaBeta/scenarios/index.html
@@ -15,8 +15,10 @@
       <th>Baseline2</th>
       <th>Baseline2_reversed</th>
       <th>OldBaseline</th>
+      <th></th>
       <th>Only_dCAS_1</th>
       <th>Only_dCAS_2</th>
+      <th></th>
       <th>Both_0</th>
       <th>Both_1</th>
       <th>Both_2</th>
@@ -39,7 +41,9 @@
       <td></td>
       <td></td>
       <td></td>
-      <td></td>
+      <td>Strong effect</td>
+      <td>Reasonable values 1</td>
+      <td>Reasonable values 2</td>
     </tr>
     <tr>
       <th></th>
@@ -48,6 +52,8 @@
       <td></td>
       <td></td>
       <td>Initial values</td>
+      <td></td>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
@@ -71,8 +77,10 @@
       <td>1</td>
       <td>0</td>
       <td>1</td>
+      <td></td>
       <td>0</td>
       <td>0</td>
+      <td></td>
       <td>0.5</td>
       <td>0.5</td>
       <td>0.5</td>
@@ -89,8 +97,10 @@
       <td>0</td>
       <td>1</td>
       <td>0</td>
+      <td></td>
       <td>1</td>
       <td>1</td>
+      <td></td>
       <td>0.5</td>
       <td>0.5</td>
       <td>0.5</td>
@@ -107,8 +117,10 @@
       <td>3</td>
       <td>3</td>
       <td>3</td>
+      <td></td>
       <td>3</td>
       <td>3</td>
+      <td></td>
       <td>3</td>
       <td>3</td>
       <td>3</td>
@@ -125,8 +137,10 @@
       <td>0.5</td>
       <td>0.5</td>
       <td>1</td>
+      <td></td>
       <td>0.5</td>
       <td>0.5</td>
+      <td></td>
       <td>0.5</td>
       <td>0.5</td>
       <td>0.5</td>
@@ -138,6 +152,8 @@
       <td></td>
       <td></td>
       <td>Kinetic constants</td>
+      <td></td>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
@@ -161,8 +177,10 @@
       <td>0.1</td>
       <td>0.1</td>
       <td>0.1</td>
+      <td></td>
       <td>0.1</td>
       <td>0.1</td>
+      <td></td>
       <td>0.1</td>
       <td>0.1</td>
       <td>0.1</td>
@@ -181,6 +199,8 @@
       <td>0.1</td>
       <td></td>
       <td></td>
+      <td></td>
+      <td></td>
       <td>0.1</td>
       <td>0.1</td>
       <td>0.1</td>
@@ -197,8 +217,10 @@
       <td></td>
       <td>0.1</td>
       <td></td>
+      <td></td>
       <td>0.1</td>
       <td>0.1</td>
+      <td></td>
       <td>0.1</td>
       <td>0.1</td>
       <td>0.1</td>
@@ -215,6 +237,8 @@
       <td>0.01</td>
       <td></td>
       <td>0.01</td>
+      <td></td>
+      <td></td>
       <td></td>
       <td></td>
       <td>0.01</td>
@@ -235,6 +259,8 @@
       <td>0.0048</td>
       <td></td>
       <td></td>
+      <td></td>
+      <td></td>
       <td>0.015</td>
       <td>0.015</td>
       <td>0.015</td>
@@ -251,8 +277,10 @@
       <td></td>
       <td>0.01</td>
       <td></td>
+      <td></td>
       <td>0.01</td>
       <td>0.01</td>
+      <td></td>
       <td>0.01</td>
       <td>0.01</td>
       <td>0.01</td>
@@ -269,8 +297,10 @@
       <td></td>
       <td>0.015</td>
       <td></td>
+      <td></td>
       <td>0.015</td>
       <td>0.015</td>
+      <td></td>
       <td>0.015</td>
       <td>0.015</td>
       <td>0.015</td>
@@ -287,6 +317,8 @@
       <td>1e-2</td>
       <td></td>
       <td>1e-3</td>
+      <td></td>
+      <td></td>
       <td></td>
       <td></td>
       <td>1e-2</td>
@@ -307,6 +339,8 @@
       <td>1e-3</td>
       <td></td>
       <td></td>
+      <td></td>
+      <td></td>
       <td>1e-3</td>
       <td>1e-4</td>
       <td>1e-3</td>
@@ -323,8 +357,10 @@
       <td></td>
       <td>1e-2</td>
       <td></td>
+      <td></td>
       <td>1e-2</td>
       <td>1e-1</td>
+      <td></td>
       <td>1e-1</td>
       <td>1e-2</td>
       <td>1e-1</td>
@@ -341,8 +377,10 @@
       <td></td>
       <td>1e-3</td>
       <td></td>
+      <td></td>
       <td>1e-3</td>
       <td>1e-2</td>
+      <td></td>
       <td>1e-2</td>
       <td>1e-3</td>
       <td>1e-2</td>
@@ -361,6 +399,8 @@
       <td>1e-3</td>
       <td></td>
       <td></td>
+      <td></td>
+      <td></td>
       <td>1e-2</td>
       <td>1e-3</td>
       <td>1e-2</td>
@@ -379,6 +419,8 @@
       <td>1e-4</td>
       <td></td>
       <td></td>
+      <td></td>
+      <td></td>
       <td>1e-4</td>
       <td>1e-5</td>
       <td>1e-4</td>
@@ -395,8 +437,10 @@
       <td></td>
       <td>1e-2</td>
       <td></td>
+      <td></td>
       <td>1e-3</td>
       <td>1e-3</td>
+      <td></td>
       <td>1e-2</td>
       <td>1e-3</td>
       <td>1e-3</td>
@@ -413,8 +457,10 @@
       <td></td>
       <td>1e-4</td>
       <td></td>
+      <td></td>
       <td>1e-5</td>
       <td>1e-5</td>
+      <td></td>
       <td>1e-4</td>
       <td>1e-5</td>
       <td>1e-5</td>
@@ -436,11 +482,15 @@
       <td></td>
       <td></td>
       <td></td>
+      <td></td>
+      <td></td>
     </tr>
     <tr>
       <th></th>
       <td></td>
       <td>https://github.com/numpde/nct1/tree/main/code/20210413-AlphaBeta/checkpoint/</td>
+      <td></td>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
