--- a/code/20210413-AlphaBeta/scenarios/index.html
+++ b/code/20210413-AlphaBeta/scenarios/index.html
@@ -22,6 +22,7 @@
       <th>Both_0</th>
       <th>Both_1</th>
       <th>Both_2</th>
+      <th>Both_3</th>
     </tr>
   </thead>
   <tbody>
@@ -44,6 +45,7 @@
       <td>Strong effect</td>
       <td>Reasonable values 1</td>
       <td>Reasonable values 2</td>
+      <td>Reasonable values, change "CAS with Ran"</td>
     </tr>
     <tr>
       <th></th>
@@ -52,6 +54,7 @@
       <td></td>
       <td></td>
       <td>Initial values</td>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
@@ -84,6 +87,7 @@
       <td>0.5</td>
       <td>0.5</td>
       <td>0.5</td>
+      <td>0.5</td>
     </tr>
     <tr>
       <th></th>
@@ -101,6 +105,7 @@
       <td>1</td>
       <td>1</td>
       <td></td>
+      <td>0.5</td>
       <td>0.5</td>
       <td>0.5</td>
       <td>0.5</td>
@@ -124,6 +129,7 @@
       <td>3</td>
       <td>3</td>
       <td>3</td>
+      <td>3</td>
     </tr>
     <tr>
       <th></th>
@@ -144,6 +150,7 @@
       <td>0.5</td>
       <td>0.5</td>
       <td>0.5</td>
+      <td>0.5</td>
     </tr>
     <tr>
       <th></th>
@@ -152,6 +159,7 @@
       <td></td>
       <td></td>
       <td>Kinetic constants</td>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
@@ -184,6 +192,7 @@
       <td>0.1</td>
       <td>0.1</td>
       <td>0.1</td>
+      <td>0.1</td>
     </tr>
     <tr>
       <th></th>
@@ -201,6 +210,7 @@
       <td></td>
       <td></td>
       <td></td>
+      <td>0.1</td>
       <td>0.1</td>
       <td>0.1</td>
       <td>0.1</td>
@@ -224,6 +234,7 @@
       <td>0.1</td>
       <td>0.1</td>
       <td>0.1</td>
+      <td>0.1</td>
     </tr>
     <tr>
       <th></th>
@@ -241,6 +252,7 @@
       <td></td>
       <td></td>
       <td></td>
+      <td>0.01</td>
       <td>0.01</td>
       <td>0.01</td>
       <td>0.01</td>
@@ -264,6 +276,7 @@
       <td>0.015</td>
       <td>0.015</td>
       <td>0.015</td>
+      <td>0.015</td>
     </tr>
     <tr>
       <th></th>
@@ -284,6 +297,7 @@
       <td>0.01</td>
       <td>0.01</td>
       <td>0.01</td>
+      <td>0.001</td>
     </tr>
     <tr>
       <th></th>
@@ -304,6 +318,7 @@
       <td>0.015</td>
       <td>0.015</td>
       <td>0.015</td>
+      <td>0.0015</td>
     </tr>
     <tr>
       <th></th>
@@ -323,6 +338,7 @@
       <td></td>
       <td>1e-2</td>
       <td>1e-3</td>
+      <td>1e-2</td>
       <td>1e-2</td>
     </tr>
     <tr>
@@ -344,6 +360,7 @@
       <td>1e-3</td>
       <td>1e-4</td>
       <td>1e-3</td>
+      <td>1e-3</td>
     </tr>
     <tr>
       <th></th>
@@ -364,6 +381,7 @@
       <td>1e-1</td>
       <td>1e-2</td>
       <td>1e-1</td>
+      <td>1e-1</td>
     </tr>
     <tr>
       <th></th>
@@ -383,6 +401,7 @@
       <td></td>
       <td>1e-2</td>
       <td>1e-3</td>
+      <td>1e-2</td>
       <td>1e-2</td>
     </tr>
     <tr>
@@ -404,6 +423,7 @@
       <td>1e-2</td>
       <td>1e-3</td>
       <td>1e-2</td>
+      <td>1e-2</td>
     </tr>
     <tr>
       <th></th>
@@ -423,6 +443,7 @@
       <td></td>
       <td>1e-4</td>
       <td>1e-5</td>
+      <td>1e-4</td>
       <td>1e-4</td>
     </tr>
     <tr>
@@ -444,6 +465,7 @@
       <td>1e-2</td>
       <td>1e-3</td>
       <td>1e-3</td>
+      <td>1e-3</td>
     </tr>
     <tr>
       <th></th>
@@ -462,6 +484,7 @@
       <td>1e-5</td>
       <td></td>
       <td>1e-4</td>
+      <td>1e-5</td>
       <td>1e-5</td>
       <td>1e-5</td>
     </tr>
@@ -484,11 +507,13 @@
       <td></td>
       <td></td>
       <td></td>
+      <td></td>
     </tr>
     <tr>
       <th></th>
       <td></td>
       <td>https://github.com/numpde/nct1/tree/main/code/20210413-AlphaBeta/checkpoint/</td>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
