--- a/code/20210413-AlphaBeta/python/plot/index.html
+++ b/code/20210413-AlphaBeta/python/plot/index.html
@@ -8,6 +8,7 @@
       <th>Both_0</th>
       <th>Both_1</th>
       <th>Both_2</th>
+      <th>Both_3</th>
       <th>OldBaseline</th>
       <th>Only_dCAS_1</th>
       <th>Only_dCAS_2</th>
@@ -22,6 +23,7 @@
       <td><a href="Both_0/CAS (excl. ΔCAS).png"><img style="width:196px" src="Both_0/CAS (excl. ΔCAS).png"/></a></td>
       <td><a href="Both_1/CAS (excl. ΔCAS).png"><img style="width:196px" src="Both_1/CAS (excl. ΔCAS).png"/></a></td>
       <td><a href="Both_2/CAS (excl. ΔCAS).png"><img style="width:196px" src="Both_2/CAS (excl. ΔCAS).png"/></a></td>
+      <td><a href="Both_3/CAS (excl. ΔCAS).png"><img style="width:196px" src="Both_3/CAS (excl. ΔCAS).png"/></a></td>
       <td><a href="OldBaseline/CAS (excl. ΔCAS).png"><img style="width:196px" src="OldBaseline/CAS (excl. ΔCAS).png"/></a></td>
       <td><a href="Only_dCAS_1/CAS (excl. ΔCAS).png"><img style="width:196px" src="Only_dCAS_1/CAS (excl. ΔCAS).png"/></a></td>
       <td><a href="Only_dCAS_2/CAS (excl. ΔCAS).png"><img style="width:196px" src="Only_dCAS_2/CAS (excl. ΔCAS).png"/></a></td>
@@ -34,6 +36,7 @@
       <td><a href="Both_0/ΔCAS.png"><img style="width:196px" src="Both_0/ΔCAS.png"/></a></td>
       <td><a href="Both_1/ΔCAS.png"><img style="width:196px" src="Both_1/ΔCAS.png"/></a></td>
       <td><a href="Both_2/ΔCAS.png"><img style="width:196px" src="Both_2/ΔCAS.png"/></a></td>
+      <td><a href="Both_3/ΔCAS.png"><img style="width:196px" src="Both_3/ΔCAS.png"/></a></td>
       <td><a href="OldBaseline/ΔCAS.png"><img style="width:196px" src="OldBaseline/ΔCAS.png"/></a></td>
       <td><a href="Only_dCAS_1/ΔCAS.png"><img style="width:196px" src="Only_dCAS_1/ΔCAS.png"/></a></td>
       <td><a href="Only_dCAS_2/ΔCAS.png"><img style="width:196px" src="Only_dCAS_2/ΔCAS.png"/></a></td>
@@ -46,6 +49,7 @@
       <td><a href="Both_0/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="Both_0/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
       <td><a href="Both_1/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="Both_1/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
       <td><a href="Both_2/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="Both_2/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
+      <td><a href="Both_3/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="Both_3/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
       <td><a href="OldBaseline/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="OldBaseline/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
       <td><a href="Only_dCAS_1/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="Only_dCAS_1/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
       <td><a href="Only_dCAS_2/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="Only_dCAS_2/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
@@ -58,6 +62,7 @@
       <td><a href="Both_0/ΔCAS·Ran·GTP.png"><img style="width:196px" src="Both_0/ΔCAS·Ran·GTP.png"/></a></td>
       <td><a href="Both_1/ΔCAS·Ran·GTP.png"><img style="width:196px" src="Both_1/ΔCAS·Ran·GTP.png"/></a></td>
       <td><a href="Both_2/ΔCAS·Ran·GTP.png"><img style="width:196px" src="Both_2/ΔCAS·Ran·GTP.png"/></a></td>
+      <td><a href="Both_3/ΔCAS·Ran·GTP.png"><img style="width:196px" src="Both_3/ΔCAS·Ran·GTP.png"/></a></td>
       <td><a href="OldBaseline/ΔCAS·Ran·GTP.png"><img style="width:196px" src="OldBaseline/ΔCAS·Ran·GTP.png"/></a></td>
       <td><a href="Only_dCAS_1/ΔCAS·Ran·GTP.png"><img style="width:196px" src="Only_dCAS_1/ΔCAS·Ran·GTP.png"/></a></td>
       <td><a href="Only_dCAS_2/ΔCAS·Ran·GTP.png"><img style="width:196px" src="Only_dCAS_2/ΔCAS·Ran·GTP.png"/></a></td>
@@ -70,6 +75,7 @@
       <td><a href="Both_0/ImpB.png"><img style="width:196px" src="Both_0/ImpB.png"/></a></td>
       <td><a href="Both_1/ImpB.png"><img style="width:196px" src="Both_1/ImpB.png"/></a></td>
       <td><a href="Both_2/ImpB.png"><img style="width:196px" src="Both_2/ImpB.png"/></a></td>
+      <td><a href="Both_3/ImpB.png"><img style="width:196px" src="Both_3/ImpB.png"/></a></td>
       <td><a href="OldBaseline/ImpB.png"><img style="width:196px" src="OldBaseline/ImpB.png"/></a></td>
       <td><a href="Only_dCAS_1/ImpB.png"><img style="width:196px" src="Only_dCAS_1/ImpB.png"/></a></td>
       <td><a href="Only_dCAS_2/ImpB.png"><img style="width:196px" src="Only_dCAS_2/ImpB.png"/></a></td>
@@ -82,6 +88,7 @@
       <td><a href="Both_0/ImpA.png"><img style="width:196px" src="Both_0/ImpA.png"/></a></td>
       <td><a href="Both_1/ImpA.png"><img style="width:196px" src="Both_1/ImpA.png"/></a></td>
       <td><a href="Both_2/ImpA.png"><img style="width:196px" src="Both_2/ImpA.png"/></a></td>
+      <td><a href="Both_3/ImpA.png"><img style="width:196px" src="Both_3/ImpA.png"/></a></td>
       <td><a href="OldBaseline/ImpA.png"><img style="width:196px" src="OldBaseline/ImpA.png"/></a></td>
       <td><a href="Only_dCAS_1/ImpA.png"><img style="width:196px" src="Only_dCAS_1/ImpA.png"/></a></td>
       <td><a href="Only_dCAS_2/ImpA.png"><img style="width:196px" src="Only_dCAS_2/ImpA.png"/></a></td>
@@ -94,6 +101,7 @@
       <td><a href="Both_0/Ran·GTP.png"><img style="width:196px" src="Both_0/Ran·GTP.png"/></a></td>
       <td><a href="Both_1/Ran·GTP.png"><img style="width:196px" src="Both_1/Ran·GTP.png"/></a></td>
       <td><a href="Both_2/Ran·GTP.png"><img style="width:196px" src="Both_2/Ran·GTP.png"/></a></td>
+      <td><a href="Both_3/Ran·GTP.png"><img style="width:196px" src="Both_3/Ran·GTP.png"/></a></td>
       <td><a href="OldBaseline/Ran·GTP.png"><img style="width:196px" src="OldBaseline/Ran·GTP.png"/></a></td>
       <td><a href="Only_dCAS_1/Ran·GTP.png"><img style="width:196px" src="Only_dCAS_1/Ran·GTP.png"/></a></td>
       <td><a href="Only_dCAS_2/Ran·GTP.png"><img style="width:196px" src="Only_dCAS_2/Ran·GTP.png"/></a></td>
@@ -106,6 +114,7 @@
       <td><a href="Both_0/NLS.png"><img style="width:196px" src="Both_0/NLS.png"/></a></td>
       <td><a href="Both_1/NLS.png"><img style="width:196px" src="Both_1/NLS.png"/></a></td>
       <td><a href="Both_2/NLS.png"><img style="width:196px" src="Both_2/NLS.png"/></a></td>
+      <td><a href="Both_3/NLS.png"><img style="width:196px" src="Both_3/NLS.png"/></a></td>
       <td><a href="OldBaseline/NLS.png"><img style="width:196px" src="OldBaseline/NLS.png"/></a></td>
       <td><a href="Only_dCAS_1/NLS.png"><img style="width:196px" src="Only_dCAS_1/NLS.png"/></a></td>
       <td><a href="Only_dCAS_2/NLS.png"><img style="width:196px" src="Only_dCAS_2/NLS.png"/></a></td>
