--- a/code/20210413-AlphaBeta/scenarios/index.html
+++ b/code/20210413-AlphaBeta/scenarios/index.html
@@ -23,6 +23,7 @@
       <th>Both_1</th>
       <th>Both_2</th>
       <th>Both_3</th>
+      <th>Both_4</th>
     </tr>
   </thead>
   <tbody>
@@ -46,6 +47,7 @@
       <td>Reasonable values 1</td>
       <td>Reasonable values 2</td>
       <td>Reasonable values, change "CAS with Ran"</td>
+      <td>Replenish NLS</td>
     </tr>
     <tr>
       <th></th>
@@ -54,6 +56,7 @@
       <td></td>
       <td></td>
       <td>Initial values</td>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
@@ -88,6 +91,7 @@
       <td>0.5</td>
       <td>0.5</td>
       <td>0.5</td>
+      <td>0.5</td>
     </tr>
     <tr>
       <th></th>
@@ -105,6 +109,7 @@
       <td>1</td>
       <td>1</td>
       <td></td>
+      <td>0.5</td>
       <td>0.5</td>
       <td>0.5</td>
       <td>0.5</td>
@@ -130,6 +135,7 @@
       <td>3</td>
       <td>3</td>
       <td>3</td>
+      <td>3</td>
     </tr>
     <tr>
       <th></th>
@@ -151,6 +157,7 @@
       <td>0.5</td>
       <td>0.5</td>
       <td>0.5</td>
+      <td>0.5</td>
     </tr>
     <tr>
       <th></th>
@@ -159,6 +166,7 @@
       <td></td>
       <td></td>
       <td>Kinetic constants</td>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
@@ -193,6 +201,7 @@
       <td>0.1</td>
       <td>0.1</td>
       <td>0.1</td>
+      <td>0.1</td>
     </tr>
     <tr>
       <th></th>
@@ -213,6 +222,7 @@
       <td>0.1</td>
       <td>0.1</td>
       <td>0.1</td>
+      <td>1e-3</td>
       <td>1e-3</td>
     </tr>
     <tr>
@@ -235,6 +245,7 @@
       <td>0.1</td>
       <td>0.1</td>
       <td>1e-2</td>
+      <td>1e-2</td>
     </tr>
     <tr>
       <th></th>
@@ -252,6 +263,7 @@
       <td></td>
       <td></td>
       <td></td>
+      <td>0.01</td>
       <td>0.01</td>
       <td>0.01</td>
       <td>0.01</td>
@@ -277,6 +289,7 @@
       <td>0.015</td>
       <td>0.015</td>
       <td>0.015</td>
+      <td>0.015</td>
     </tr>
     <tr>
       <th></th>
@@ -294,6 +307,7 @@
       <td>0.01</td>
       <td>0.01</td>
       <td></td>
+      <td>0.01</td>
       <td>0.01</td>
       <td>0.01</td>
       <td>0.01</td>
@@ -319,6 +333,7 @@
       <td>0.015</td>
       <td>0.015</td>
       <td>1</td>
+      <td>1</td>
     </tr>
     <tr>
       <th></th>
@@ -338,6 +353,7 @@
       <td></td>
       <td>1e-2</td>
       <td>1e-3</td>
+      <td>1e-2</td>
       <td>1e-2</td>
       <td>1e-2</td>
     </tr>
@@ -361,6 +377,7 @@
       <td>1e-4</td>
       <td>1e-3</td>
       <td>1e-3</td>
+      <td>1e-3</td>
     </tr>
     <tr>
       <th></th>
@@ -382,6 +399,7 @@
       <td>1e-2</td>
       <td>1e-1</td>
       <td>1e-2</td>
+      <td>1e-2</td>
     </tr>
     <tr>
       <th></th>
@@ -402,6 +420,7 @@
       <td>1e-2</td>
       <td>1e-3</td>
       <td>1e-2</td>
+      <td>1e-3</td>
       <td>1e-3</td>
     </tr>
     <tr>
@@ -420,6 +439,7 @@
       <td></td>
       <td></td>
       <td></td>
+      <td>0.1</td>
       <td>0.1</td>
       <td>0.1</td>
       <td>0.1</td>
@@ -445,6 +465,7 @@
       <td>0.1</td>
       <td>0.1</td>
       <td>0.1</td>
+      <td>0.1</td>
     </tr>
     <tr>
       <th></th>
@@ -466,6 +487,7 @@
       <td>1e-3</td>
       <td>1e-2</td>
       <td>1e-2</td>
+      <td>1e-2</td>
     </tr>
     <tr>
       <th></th>
@@ -485,6 +507,7 @@
       <td></td>
       <td>1e-4</td>
       <td>1e-5</td>
+      <td>1e-4</td>
       <td>1e-4</td>
       <td>1e-4</td>
     </tr>
@@ -508,6 +531,7 @@
       <td>1e-3</td>
       <td>1e-3</td>
       <td>1e-2</td>
+      <td>1e-2</td>
     </tr>
     <tr>
       <th></th>
@@ -529,11 +553,35 @@
       <td>1e-5</td>
       <td>1e-5</td>
       <td>1e-4</td>
+      <td>1e-4</td>
+    </tr>
+    <tr>
+      <th></th>
+      <td>Reaction</td>
+      <td>Replenish NLS</td>
+      <td>kf</td>
+      <td>1/s</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>1e-2</td>
     </tr>
     <tr>
       <th></th>
       <td></td>
-      <td>For results, see:</td>
+      <td>For uploaded results, see:</td>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
@@ -554,7 +602,8 @@
     <tr>
       <th></th>
       <td></td>
-      <td>https://github.com/numpde/nct1/tree/main/code/20210413-AlphaBeta/checkpoint/</td>
+      <td>https://numpde.github.io/nct1/code/20210413-AlphaBeta/checkpoint/</td>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
