--- a/code/20210413-AlphaBeta/python/plot/index.html
+++ b/code/20210413-AlphaBeta/python/plot/index.html
@@ -9,6 +9,7 @@
       <th>Both_1</th>
       <th>Both_2</th>
       <th>Both_3</th>
+      <th>Both_4</th>
       <th>OldBaseline</th>
       <th>Only_dCAS_1</th>
       <th>Only_dCAS_2</th>
@@ -24,6 +25,7 @@
       <td><a href="Both_1/CAS (excl. ΔCAS).png"><img style="width:196px" src="Both_1/CAS (excl. ΔCAS).png"/></a></td>
       <td><a href="Both_2/CAS (excl. ΔCAS).png"><img style="width:196px" src="Both_2/CAS (excl. ΔCAS).png"/></a></td>
       <td><a href="Both_3/CAS (excl. ΔCAS).png"><img style="width:196px" src="Both_3/CAS (excl. ΔCAS).png"/></a></td>
+      <td><a href="Both_4/CAS (excl. ΔCAS).png"><img style="width:196px" src="Both_4/CAS (excl. ΔCAS).png"/></a></td>
       <td><a href="OldBaseline/CAS (excl. ΔCAS).png"><img style="width:196px" src="OldBaseline/CAS (excl. ΔCAS).png"/></a></td>
       <td><a href="Only_dCAS_1/CAS (excl. ΔCAS).png"><img style="width:196px" src="Only_dCAS_1/CAS (excl. ΔCAS).png"/></a></td>
       <td><a href="Only_dCAS_2/CAS (excl. ΔCAS).png"><img style="width:196px" src="Only_dCAS_2/CAS (excl. ΔCAS).png"/></a></td>
@@ -37,6 +39,7 @@
       <td><a href="Both_1/ΔCAS.png"><img style="width:196px" src="Both_1/ΔCAS.png"/></a></td>
       <td><a href="Both_2/ΔCAS.png"><img style="width:196px" src="Both_2/ΔCAS.png"/></a></td>
       <td><a href="Both_3/ΔCAS.png"><img style="width:196px" src="Both_3/ΔCAS.png"/></a></td>
+      <td><a href="Both_4/ΔCAS.png"><img style="width:196px" src="Both_4/ΔCAS.png"/></a></td>
       <td><a href="OldBaseline/ΔCAS.png"><img style="width:196px" src="OldBaseline/ΔCAS.png"/></a></td>
       <td><a href="Only_dCAS_1/ΔCAS.png"><img style="width:196px" src="Only_dCAS_1/ΔCAS.png"/></a></td>
       <td><a href="Only_dCAS_2/ΔCAS.png"><img style="width:196px" src="Only_dCAS_2/ΔCAS.png"/></a></td>
@@ -50,6 +53,7 @@
       <td><a href="Both_1/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="Both_1/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
       <td><a href="Both_2/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="Both_2/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
       <td><a href="Both_3/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="Both_3/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
+      <td><a href="Both_4/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="Both_4/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
       <td><a href="OldBaseline/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="OldBaseline/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
       <td><a href="Only_dCAS_1/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="Only_dCAS_1/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
       <td><a href="Only_dCAS_2/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="Only_dCAS_2/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
@@ -63,6 +67,7 @@
       <td><a href="Both_1/ΔCAS·Ran·GTP.png"><img style="width:196px" src="Both_1/ΔCAS·Ran·GTP.png"/></a></td>
       <td><a href="Both_2/ΔCAS·Ran·GTP.png"><img style="width:196px" src="Both_2/ΔCAS·Ran·GTP.png"/></a></td>
       <td><a href="Both_3/ΔCAS·Ran·GTP.png"><img style="width:196px" src="Both_3/ΔCAS·Ran·GTP.png"/></a></td>
+      <td><a href="Both_4/ΔCAS·Ran·GTP.png"><img style="width:196px" src="Both_4/ΔCAS·Ran·GTP.png"/></a></td>
       <td><a href="OldBaseline/ΔCAS·Ran·GTP.png"><img style="width:196px" src="OldBaseline/ΔCAS·Ran·GTP.png"/></a></td>
       <td><a href="Only_dCAS_1/ΔCAS·Ran·GTP.png"><img style="width:196px" src="Only_dCAS_1/ΔCAS·Ran·GTP.png"/></a></td>
       <td><a href="Only_dCAS_2/ΔCAS·Ran·GTP.png"><img style="width:196px" src="Only_dCAS_2/ΔCAS·Ran·GTP.png"/></a></td>
@@ -76,6 +81,7 @@
       <td><a href="Both_1/ImpB.png"><img style="width:196px" src="Both_1/ImpB.png"/></a></td>
       <td><a href="Both_2/ImpB.png"><img style="width:196px" src="Both_2/ImpB.png"/></a></td>
       <td><a href="Both_3/ImpB.png"><img style="width:196px" src="Both_3/ImpB.png"/></a></td>
+      <td><a href="Both_4/ImpB.png"><img style="width:196px" src="Both_4/ImpB.png"/></a></td>
       <td><a href="OldBaseline/ImpB.png"><img style="width:196px" src="OldBaseline/ImpB.png"/></a></td>
       <td><a href="Only_dCAS_1/ImpB.png"><img style="width:196px" src="Only_dCAS_1/ImpB.png"/></a></td>
       <td><a href="Only_dCAS_2/ImpB.png"><img style="width:196px" src="Only_dCAS_2/ImpB.png"/></a></td>
@@ -89,6 +95,7 @@
       <td><a href="Both_1/ImpA.png"><img style="width:196px" src="Both_1/ImpA.png"/></a></td>
       <td><a href="Both_2/ImpA.png"><img style="width:196px" src="Both_2/ImpA.png"/></a></td>
       <td><a href="Both_3/ImpA.png"><img style="width:196px" src="Both_3/ImpA.png"/></a></td>
+      <td><a href="Both_4/ImpA.png"><img style="width:196px" src="Both_4/ImpA.png"/></a></td>
       <td><a href="OldBaseline/ImpA.png"><img style="width:196px" src="OldBaseline/ImpA.png"/></a></td>
       <td><a href="Only_dCAS_1/ImpA.png"><img style="width:196px" src="Only_dCAS_1/ImpA.png"/></a></td>
       <td><a href="Only_dCAS_2/ImpA.png"><img style="width:196px" src="Only_dCAS_2/ImpA.png"/></a></td>
@@ -102,6 +109,7 @@
       <td><a href="Both_1/Ran·GTP.png"><img style="width:196px" src="Both_1/Ran·GTP.png"/></a></td>
       <td><a href="Both_2/Ran·GTP.png"><img style="width:196px" src="Both_2/Ran·GTP.png"/></a></td>
       <td><a href="Both_3/Ran·GTP.png"><img style="width:196px" src="Both_3/Ran·GTP.png"/></a></td>
+      <td><a href="Both_4/Ran·GTP.png"><img style="width:196px" src="Both_4/Ran·GTP.png"/></a></td>
       <td><a href="OldBaseline/Ran·GTP.png"><img style="width:196px" src="OldBaseline/Ran·GTP.png"/></a></td>
       <td><a href="Only_dCAS_1/Ran·GTP.png"><img style="width:196px" src="Only_dCAS_1/Ran·GTP.png"/></a></td>
       <td><a href="Only_dCAS_2/Ran·GTP.png"><img style="width:196px" src="Only_dCAS_2/Ran·GTP.png"/></a></td>
@@ -115,6 +123,7 @@
       <td><a href="Both_1/NLS.png"><img style="width:196px" src="Both_1/NLS.png"/></a></td>
       <td><a href="Both_2/NLS.png"><img style="width:196px" src="Both_2/NLS.png"/></a></td>
       <td><a href="Both_3/NLS.png"><img style="width:196px" src="Both_3/NLS.png"/></a></td>
+      <td><a href="Both_4/NLS.png"><img style="width:196px" src="Both_4/NLS.png"/></a></td>
       <td><a href="OldBaseline/NLS.png"><img style="width:196px" src="OldBaseline/NLS.png"/></a></td>
       <td><a href="Only_dCAS_1/NLS.png"><img style="width:196px" src="Only_dCAS_1/NLS.png"/></a></td>
       <td><a href="Only_dCAS_2/NLS.png"><img style="width:196px" src="Only_dCAS_2/NLS.png"/></a></td>
