--- a/code/20210413-AlphaBeta/python/plot/index.html
+++ b/code/20210413-AlphaBeta/python/plot/index.html
@@ -10,6 +10,7 @@
       <th>Both_2</th>
       <th>Both_3</th>
       <th>Both_4</th>
+      <th>Both_5</th>
       <th>OldBaseline</th>
       <th>Only_dCAS_1</th>
       <th>Only_dCAS_2</th>
@@ -26,6 +27,7 @@
       <td><a href="Both_2/CAS (excl. ΔCAS).png"><img style="width:196px" src="Both_2/CAS (excl. ΔCAS).png"/></a></td>
       <td><a href="Both_3/CAS (excl. ΔCAS).png"><img style="width:196px" src="Both_3/CAS (excl. ΔCAS).png"/></a></td>
       <td><a href="Both_4/CAS (excl. ΔCAS).png"><img style="width:196px" src="Both_4/CAS (excl. ΔCAS).png"/></a></td>
+      <td><a href="Both_5/CAS (excl. ΔCAS).png"><img style="width:196px" src="Both_5/CAS (excl. ΔCAS).png"/></a></td>
       <td><a href="OldBaseline/CAS (excl. ΔCAS).png"><img style="width:196px" src="OldBaseline/CAS (excl. ΔCAS).png"/></a></td>
       <td><a href="Only_dCAS_1/CAS (excl. ΔCAS).png"><img style="width:196px" src="Only_dCAS_1/CAS (excl. ΔCAS).png"/></a></td>
       <td><a href="Only_dCAS_2/CAS (excl. ΔCAS).png"><img style="width:196px" src="Only_dCAS_2/CAS (excl. ΔCAS).png"/></a></td>
@@ -40,6 +42,7 @@
       <td><a href="Both_2/ΔCAS.png"><img style="width:196px" src="Both_2/ΔCAS.png"/></a></td>
       <td><a href="Both_3/ΔCAS.png"><img style="width:196px" src="Both_3/ΔCAS.png"/></a></td>
       <td><a href="Both_4/ΔCAS.png"><img style="width:196px" src="Both_4/ΔCAS.png"/></a></td>
+      <td><a href="Both_5/ΔCAS.png"><img style="width:196px" src="Both_5/ΔCAS.png"/></a></td>
       <td><a href="OldBaseline/ΔCAS.png"><img style="width:196px" src="OldBaseline/ΔCAS.png"/></a></td>
       <td><a href="Only_dCAS_1/ΔCAS.png"><img style="width:196px" src="Only_dCAS_1/ΔCAS.png"/></a></td>
       <td><a href="Only_dCAS_2/ΔCAS.png"><img style="width:196px" src="Only_dCAS_2/ΔCAS.png"/></a></td>
@@ -54,6 +57,7 @@
       <td><a href="Both_2/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="Both_2/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
       <td><a href="Both_3/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="Both_3/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
       <td><a href="Both_4/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="Both_4/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
+      <td><a href="Both_5/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="Both_5/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
       <td><a href="OldBaseline/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="OldBaseline/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
       <td><a href="Only_dCAS_1/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="Only_dCAS_1/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
       <td><a href="Only_dCAS_2/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"><img style="width:196px" src="Only_dCAS_2/CAS·Ran·GTP (excl. ΔCAS·Ran·GTP).png"/></a></td>
@@ -68,6 +72,7 @@
       <td><a href="Both_2/ΔCAS·Ran·GTP.png"><img style="width:196px" src="Both_2/ΔCAS·Ran·GTP.png"/></a></td>
       <td><a href="Both_3/ΔCAS·Ran·GTP.png"><img style="width:196px" src="Both_3/ΔCAS·Ran·GTP.png"/></a></td>
       <td><a href="Both_4/ΔCAS·Ran·GTP.png"><img style="width:196px" src="Both_4/ΔCAS·Ran·GTP.png"/></a></td>
+      <td><a href="Both_5/ΔCAS·Ran·GTP.png"><img style="width:196px" src="Both_5/ΔCAS·Ran·GTP.png"/></a></td>
       <td><a href="OldBaseline/ΔCAS·Ran·GTP.png"><img style="width:196px" src="OldBaseline/ΔCAS·Ran·GTP.png"/></a></td>
       <td><a href="Only_dCAS_1/ΔCAS·Ran·GTP.png"><img style="width:196px" src="Only_dCAS_1/ΔCAS·Ran·GTP.png"/></a></td>
       <td><a href="Only_dCAS_2/ΔCAS·Ran·GTP.png"><img style="width:196px" src="Only_dCAS_2/ΔCAS·Ran·GTP.png"/></a></td>
@@ -82,6 +87,7 @@
       <td><a href="Both_2/ImpB.png"><img style="width:196px" src="Both_2/ImpB.png"/></a></td>
       <td><a href="Both_3/ImpB.png"><img style="width:196px" src="Both_3/ImpB.png"/></a></td>
       <td><a href="Both_4/ImpB.png"><img style="width:196px" src="Both_4/ImpB.png"/></a></td>
+      <td><a href="Both_5/ImpB.png"><img style="width:196px" src="Both_5/ImpB.png"/></a></td>
       <td><a href="OldBaseline/ImpB.png"><img style="width:196px" src="OldBaseline/ImpB.png"/></a></td>
       <td><a href="Only_dCAS_1/ImpB.png"><img style="width:196px" src="Only_dCAS_1/ImpB.png"/></a></td>
       <td><a href="Only_dCAS_2/ImpB.png"><img style="width:196px" src="Only_dCAS_2/ImpB.png"/></a></td>
@@ -96,6 +102,7 @@
       <td><a href="Both_2/ImpA.png"><img style="width:196px" src="Both_2/ImpA.png"/></a></td>
       <td><a href="Both_3/ImpA.png"><img style="width:196px" src="Both_3/ImpA.png"/></a></td>
       <td><a href="Both_4/ImpA.png"><img style="width:196px" src="Both_4/ImpA.png"/></a></td>
+      <td><a href="Both_5/ImpA.png"><img style="width:196px" src="Both_5/ImpA.png"/></a></td>
       <td><a href="OldBaseline/ImpA.png"><img style="width:196px" src="OldBaseline/ImpA.png"/></a></td>
       <td><a href="Only_dCAS_1/ImpA.png"><img style="width:196px" src="Only_dCAS_1/ImpA.png"/></a></td>
       <td><a href="Only_dCAS_2/ImpA.png"><img style="width:196px" src="Only_dCAS_2/ImpA.png"/></a></td>
@@ -110,6 +117,7 @@
       <td><a href="Both_2/Ran·GTP.png"><img style="width:196px" src="Both_2/Ran·GTP.png"/></a></td>
       <td><a href="Both_3/Ran·GTP.png"><img style="width:196px" src="Both_3/Ran·GTP.png"/></a></td>
       <td><a href="Both_4/Ran·GTP.png"><img style="width:196px" src="Both_4/Ran·GTP.png"/></a></td>
+      <td><a href="Both_5/Ran·GTP.png"><img style="width:196px" src="Both_5/Ran·GTP.png"/></a></td>
       <td><a href="OldBaseline/Ran·GTP.png"><img style="width:196px" src="OldBaseline/Ran·GTP.png"/></a></td>
       <td><a href="Only_dCAS_1/Ran·GTP.png"><img style="width:196px" src="Only_dCAS_1/Ran·GTP.png"/></a></td>
       <td><a href="Only_dCAS_2/Ran·GTP.png"><img style="width:196px" src="Only_dCAS_2/Ran·GTP.png"/></a></td>
@@ -124,6 +132,7 @@
       <td><a href="Both_2/NLS.png"><img style="width:196px" src="Both_2/NLS.png"/></a></td>
       <td><a href="Both_3/NLS.png"><img style="width:196px" src="Both_3/NLS.png"/></a></td>
       <td><a href="Both_4/NLS.png"><img style="width:196px" src="Both_4/NLS.png"/></a></td>
+      <td><a href="Both_5/NLS.png"><img style="width:196px" src="Both_5/NLS.png"/></a></td>
       <td><a href="OldBaseline/NLS.png"><img style="width:196px" src="OldBaseline/NLS.png"/></a></td>
       <td><a href="Only_dCAS_1/NLS.png"><img style="width:196px" src="Only_dCAS_1/NLS.png"/></a></td>
       <td><a href="Only_dCAS_2/NLS.png"><img style="width:196px" src="Only_dCAS_2/NLS.png"/></a></td>
