--- a/code/20210413-AlphaBeta/scenarios/index.html
+++ b/code/20210413-AlphaBeta/scenarios/index.html
@@ -24,6 +24,8 @@
       <th>Both_2</th>
       <th>Both_3</th>
       <th>Both_4</th>
+      <th></th>
+      <th>Both_5</th>
     </tr>
   </thead>
   <tbody>
@@ -48,6 +50,8 @@
       <td>Reasonable values 2</td>
       <td>Reasonable values, change "CAS with Ran"</td>
       <td>Replenish NLS</td>
+      <td></td>
+      <td>Draft</td>
     </tr>
     <tr>
       <th></th>
@@ -56,6 +60,8 @@
       <td></td>
       <td></td>
       <td>Initial values</td>
+      <td></td>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
@@ -92,6 +98,8 @@
       <td>0.5</td>
       <td>0.5</td>
       <td>0.5</td>
+      <td></td>
+      <td>1</td>
     </tr>
     <tr>
       <th></th>
@@ -114,6 +122,8 @@
       <td>0.5</td>
       <td>0.5</td>
       <td>0.5</td>
+      <td></td>
+      <td>2</td>
     </tr>
     <tr>
       <th></th>
@@ -135,6 +145,8 @@
       <td>3</td>
       <td>3</td>
       <td>3</td>
+      <td>3</td>
+      <td></td>
       <td>3</td>
     </tr>
     <tr>
@@ -158,6 +170,8 @@
       <td>0.5</td>
       <td>0.5</td>
       <td>0.5</td>
+      <td></td>
+      <td>0.5</td>
     </tr>
     <tr>
       <th></th>
@@ -166,6 +180,8 @@
       <td></td>
       <td></td>
       <td>Kinetic constants</td>
+      <td></td>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
@@ -202,6 +218,8 @@
       <td>0.1</td>
       <td>0.1</td>
       <td>0.1</td>
+      <td></td>
+      <td>0.1</td>
     </tr>
     <tr>
       <th></th>
@@ -223,6 +241,8 @@
       <td>0.1</td>
       <td>0.1</td>
       <td>1e-3</td>
+      <td>1e-3</td>
+      <td></td>
       <td>1e-3</td>
     </tr>
     <tr>
@@ -246,6 +266,8 @@
       <td>0.1</td>
       <td>1e-2</td>
       <td>1e-2</td>
+      <td></td>
+      <td>1e-2</td>
     </tr>
     <tr>
       <th></th>
@@ -267,6 +289,8 @@
       <td>0.01</td>
       <td>0.01</td>
       <td>0.01</td>
+      <td>0.01</td>
+      <td></td>
       <td>0.01</td>
     </tr>
     <tr>
@@ -290,6 +314,8 @@
       <td>0.015</td>
       <td>0.015</td>
       <td>0.015</td>
+      <td></td>
+      <td>0.015</td>
     </tr>
     <tr>
       <th></th>
@@ -312,6 +338,8 @@
       <td>0.01</td>
       <td>0.01</td>
       <td>0.01</td>
+      <td></td>
+      <td>0.01</td>
     </tr>
     <tr>
       <th></th>
@@ -334,6 +362,8 @@
       <td>0.015</td>
       <td>1</td>
       <td>1</td>
+      <td></td>
+      <td>0.015</td>
     </tr>
     <tr>
       <th></th>
@@ -355,6 +385,8 @@
       <td>1e-3</td>
       <td>1e-2</td>
       <td>1e-2</td>
+      <td>1e-2</td>
+      <td></td>
       <td>1e-2</td>
     </tr>
     <tr>
@@ -378,6 +410,8 @@
       <td>1e-3</td>
       <td>1e-3</td>
       <td>1e-3</td>
+      <td></td>
+      <td>1e-3</td>
     </tr>
     <tr>
       <th></th>
@@ -400,6 +434,8 @@
       <td>1e-1</td>
       <td>1e-2</td>
       <td>1e-2</td>
+      <td></td>
+      <td>1e-2</td>
     </tr>
     <tr>
       <th></th>
@@ -421,6 +457,8 @@
       <td>1e-3</td>
       <td>1e-2</td>
       <td>1e-3</td>
+      <td>1e-3</td>
+      <td></td>
       <td>1e-3</td>
     </tr>
     <tr>
@@ -444,6 +482,8 @@
       <td>0.1</td>
       <td>0.1</td>
       <td>0.1</td>
+      <td></td>
+      <td>0.1</td>
     </tr>
     <tr>
       <th></th>
@@ -465,6 +505,8 @@
       <td>0.1</td>
       <td>0.1</td>
       <td>0.1</td>
+      <td>0.1</td>
+      <td></td>
       <td>0.1</td>
     </tr>
     <tr>
@@ -488,6 +530,8 @@
       <td>1e-2</td>
       <td>1e-2</td>
       <td>1e-2</td>
+      <td></td>
+      <td>1e-2</td>
     </tr>
     <tr>
       <th></th>
@@ -509,6 +553,8 @@
       <td>1e-5</td>
       <td>1e-4</td>
       <td>1e-4</td>
+      <td>1e-4</td>
+      <td></td>
       <td>1e-4</td>
     </tr>
     <tr>
@@ -532,6 +578,8 @@
       <td>1e-3</td>
       <td>1e-2</td>
       <td>1e-2</td>
+      <td></td>
+      <td>1e-2</td>
     </tr>
     <tr>
       <th></th>
@@ -553,6 +601,8 @@
       <td>1e-5</td>
       <td>1e-5</td>
       <td>1e-4</td>
+      <td>1e-4</td>
+      <td></td>
       <td>1e-4</td>
     </tr>
     <tr>
@@ -576,6 +626,8 @@
       <td></td>
       <td></td>
       <td>1e-2</td>
+      <td></td>
+      <td>1e-3</td>
     </tr>
     <tr>
       <th></th>
@@ -598,11 +650,15 @@
       <td></td>
       <td></td>
       <td></td>
+      <td></td>
+      <td></td>
     </tr>
     <tr>
       <th></th>
       <td></td>
       <td>https://numpde.github.io/nct1/code/20210413-AlphaBeta/checkpoint/</td>
+      <td></td>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
