--- a/code/20210413-AlphaBeta/checkpoint/index.html
+++ b/code/20210413-AlphaBeta/checkpoint/index.html
@@ -1,3 +1,7 @@
 
 <a href='20210526-164539'>20210526-164539</a><br>
+<a href=''>permalink</a><br>
 <a href='20210526-164951'>20210526-164951</a><br>
+<a href=''>permalink</a><br>
+<a href='20210526-171740'>20210526-171740</a><br>
+<a href='https://github.com/numpde/nct1/blob/7760474ddcc50e1e1f0ef6a85901c37b15a60260/code/20210413-AlphaBeta/checkpoint/20210526-171740'>permalink</a><br>
