--- a/code/20210413-AlphaBeta/checkpoint/20210526-174656/index.html
+++ b/code/20210413-AlphaBeta/checkpoint/20210526-174656/index.html
@@ -1,1 +1,2 @@
 checkpoint/20210526-174656<br><a href='model.html'>base model</a>, <a href='scenarios/index.html'>scenarios</a>, <a href='plot/index.html'>figures</a><br>
+<a href='https://github.com/numpde/nct1/tree/16eaa0a23997b44d3d0c525b2abb2e46a9cdf2cc/code/20210413-AlphaBeta'>permalink</a><br>
