--- a/code/20210413-AlphaBeta/checkpoint/20210527-123201/index.html
+++ b/code/20210413-AlphaBeta/checkpoint/20210527-123201/index.html
@@ -1,1 +1,2 @@
 checkpoint/20210527-123201<br><a href='model.html'>base model</a>, <a href='scenarios/index.html'>scenarios</a>, <a href='plot/index.html'>figures</a><br>
+<a href='https://github.com/numpde/nct1/tree/117c9e2c155735a446fbaa1299532bf9102bb463/code/20210413-AlphaBeta'>permalink</a><br>
