--- a/code/20210413-AlphaBeta/checkpoint/20210530-130953/index.html
+++ b/code/20210413-AlphaBeta/checkpoint/20210530-130953/index.html
@@ -1,1 +1,2 @@
 checkpoint/20210530-130953<br><a href='model.html'>base model</a>, <a href='scenarios/index.html'>scenarios</a>, <a href='plot/index.html'>figures</a><br>
+<a href='https://github.com/numpde/nct1/tree/22d104058d3f3c8caff3e7f9cfad0e886dc0a2eb/code/20210413-AlphaBeta'>permalink</a><br>
