--- a/code/20210413-AlphaBeta/checkpoint/20210531-083722/index.html
+++ b/code/20210413-AlphaBeta/checkpoint/20210531-083722/index.html
@@ -1,1 +1,2 @@
 checkpoint/20210531-083722<br><a href='model.html'>base model</a>, <a href='scenarios/index.html'>scenarios</a>, <a href='plot/index.html'>figures</a><br>
+<a href='https://github.com/numpde/nct1/tree/745eae473df4580f369fbb182fbdc0f59e59440f/code/20210413-AlphaBeta'>permalink</a><br>
