--- a/code/20210413-AlphaBeta/checkpoint/20210531-084101/index.html
+++ b/code/20210413-AlphaBeta/checkpoint/20210531-084101/index.html
@@ -1,1 +1,2 @@
 checkpoint/20210531-084101<br><a href='model.html'>base model</a>, <a href='scenarios/index.html'>scenarios</a>, <a href='plot/index.html'>figures</a><br>
+<a href='https://github.com/numpde/nct1/tree/a741628f331ce8377492a40b62f07380453e8c93/code/20210413-AlphaBeta'>permalink</a><br>
