--- a/code/20210413-AlphaBeta/checkpoint/20210610-144011/index.html
+++ b/code/20210413-AlphaBeta/checkpoint/20210610-144011/index.html
@@ -1,1 +1,2 @@
 checkpoint/20210610-144011<br><a href='model.html'>base model</a>, <a href='scenarios/index.html'>scenarios</a>, <a href='plot/index.html'>figures</a><br>
+<a href='https://github.com/numpde/nct1/tree/74aeba34862c0cd71804942ca6e348d2799007d0/code/20210413-AlphaBeta'>permalink</a><br>
