--- a/code/20210413-AlphaBeta/checkpoint/20210610-145023/index.html
+++ b/code/20210413-AlphaBeta/checkpoint/20210610-145023/index.html
@@ -1,1 +1,2 @@
 checkpoint/20210610-145023<br><a href='model.html'>base model</a>, <a href='scenarios/index.html'>scenarios</a>, <a href='plot/index.html'>figures</a><br>
+<a href='https://github.com/numpde/nct1/tree/3f407c5e4ca6c1c2e8259249270ad450222f761d/code/20210413-AlphaBeta'>permalink</a><br>
