--- a/code/20210413-AlphaBeta/checkpoint/20210902-115019/index.html
+++ b/code/20210413-AlphaBeta/checkpoint/20210902-115019/index.html
@@ -1,1 +1,2 @@
 checkpoint/20210902-115019<br><a href='model.html'>base model</a>, <a href='scenarios/index.html'>scenarios</a>, <a href='plot/index.html'>figures</a><br>
+<a href='https://github.com/numpde/nct1/tree/0005dddeddc43d22a81fdfbad6c4ebff67d91507/code/20210413-AlphaBeta'>permalink</a><br>
