--- a/code/20210413-AlphaBeta/checkpoint/20210928-114351/index.html
+++ b/code/20210413-AlphaBeta/checkpoint/20210928-114351/index.html
@@ -1,1 +1,2 @@
 checkpoint/20210928-114351<br><a href='model.html'>base model</a>, <a href='scenarios/index.html'>scenarios</a>, <a href='plot/index.html'>figures</a><br>
+<a href='https://github.com/numpde/nct1/tree/10a74f546cf0e99b1ab8883015408ab024303679/code/20210413-AlphaBeta'>permalink</a><br>
