--- a/code/20210413-AlphaBeta/checkpoint/20210928-114712/index.html
+++ b/code/20210413-AlphaBeta/checkpoint/20210928-114712/index.html
@@ -1,1 +1,2 @@
 checkpoint/20210928-114712<br><a href='model.html'>base model</a>, <a href='scenarios/index.html'>scenarios</a>, <a href='plot/index.html'>figures</a><br>
+<a href='https://github.com/numpde/nct1/tree/4eea9186425703e0687aaceac2bfa58bea6a840d/code/20210413-AlphaBeta'>permalink</a><br>
