--- a/code/20210413-AlphaBeta/checkpoint/20211013-080759/index.html
+++ b/code/20210413-AlphaBeta/checkpoint/20211013-080759/index.html
@@ -1,1 +1,2 @@
 checkpoint/20211013-080759<br><a href='model.html'>base model</a>, <a href='scenarios/index.html'>scenarios</a>, <a href='plot/index.html'>time-course</a>, <a href='plot_ss/index.html'>steady-state</a><br>
+<a href='https://github.com/numpde/nct1/tree/17caa989ca868145a4c19a22cb6f3c576fa50bff/code/20210413-AlphaBeta'>permalink</a><br>
