--- a/code/20210413-AlphaBeta/checkpoint/20211013-090006/index.html
+++ b/code/20210413-AlphaBeta/checkpoint/20211013-090006/index.html
@@ -1,1 +1,2 @@
 checkpoint/20211013-090006<br><a href='model.html'>base model</a>, <a href='scenarios/index.html'>scenarios</a>, <a href='plot/index.html'>time-course</a>, <a href='plot_ss/index.html'>steady-state</a><br>
+<a href='https://github.com/numpde/nct1/tree/4be64f1bd7b83d8461c17395443a6eb9abc7b838/code/20210413-AlphaBeta'>permalink</a><br>
