--- a/code/20210413-AlphaBeta/checkpoint/20211013-161446/index.html
+++ b/code/20210413-AlphaBeta/checkpoint/20211013-161446/index.html
@@ -1,1 +1,2 @@
 checkpoint/20211013-161446<br><a href='model.html'>base model</a>, <a href='scenarios/index.html'>scenarios</a>, <a href='plot/index.html'>time-course</a>, <a href='plot_ss/index.html'>steady-state</a><br>
+<a href='https://github.com/numpde/nct1/tree/642ef53836f616278ddd0b49b294615e24dd5434/code/20210413-AlphaBeta'>permalink</a><br>
