--- a/code/20210413-AlphaBeta/checkpoint/20211013-163308/index.html
+++ b/code/20210413-AlphaBeta/checkpoint/20211013-163308/index.html
@@ -1,1 +1,2 @@
 checkpoint/20211013-163308<br><a href='model.html'>base model</a>, <a href='scenarios/index.html'>scenarios</a>, <a href='plot/index.html'>time-course</a>, <a href='plot_ss/index.html'>steady-state</a><br>
+<a href='https://github.com/numpde/nct1/tree/004a0914bbf79676ae2a4b69b334d97e89391803/code/20210413-AlphaBeta'>permalink</a><br>
